# ftservo-control

./: CMakeLists.txt  README.md  package.xml
bash/: Servo12Control.sh  Servo34Control.sh  Servo56Control.sh  Servo78Control.sh  config.sh  multi_servo_cooperation.sh
include/ftservoControl/: FEETECHservo.h
launch/: Servo12Control.launch  Servo34Control.launch  Servo56Control.launch  Servo78Control.launch  initial.launch
src/: FEETECHservo.cpp  WritePos.cpp  initialize.cpp  math_tools.cpp  servoControl.cpp  singleServoControl.cpp
